	(peditor_*_value_changed): Remove the key from the changeset
	(gconf_peditor_new_*): Add g_return_val_if_fail macros
	(gconf_peditor_widget_set_guard): Add g_return_if_fail macros
	(gconf_value_float_to_int, gconf_value_int_to_float): Implement
	(gconf_property_editor_set_prop): Store the callback in the
	property editor proper
	(gconf_peditor_new): Put initialization code in an idle handler

	* gconf-property-editor.c: Add ui-control property storing the
	object (normally a widget) that controls the property; remove
	object property and replace its function with ui-control

	* capplet-util.c: Comment out most of this file

	* gconf-property-editor.c (gconf_peditor_new_int_range): Convert
	to ~_float_range
	(gconf_peditor_new_float_range): Add callbacks for conversion
	between widget's values and GConf values in the signature
	(peditor_float_range_widget_changed): Issue callback, if
	available, to convert from widget's values to GConf values
	(peditor_float_range_value_changed): Vice verca above
	(gconf_peditor_new_int_range, peditor_int_range_widget_changed)
	(peditor_int_range_value_changed): Implement. Copy from float
	versions

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.h: Don't #include bonobo*.h

	* gconf-property-editor.c (peditor_string_widget_changed): Use
	actual signature for the changed signal Use gconf_client rather
	than gconf_engine
	(gconf_property_editor_set_prop): Use weak_ref rather than destroy
	signal
	(peditor_int_range_value_changed)
	(peditor_int_range_widget_changed, gconf_peditor_new_int_range):
	Implement

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_color_value_changed): Use a
	local stack variable for the color rather than a pointer. Duh.
	(peditor_select_menu_widget_changed): Use
	gtk_option_menu_get_history
	(peditor_select_menu_widget_changed): Accept option_menu as
	parameter
	(gconf_peditor_new_select_menu): Connect changed signal rather